--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "taskmaster-rbuildai-mcp",
-  "version": "0.1.0",
-  "description": "A task master MCP server for AI-driven development in VS Code by RBuildAI",
+  "name": "rtaskmaster-mcp",
+  "version": "0.2.0",
+  "description": "RTaskmaster - A task management MCP server for AI-driven development in VS Code by RBuildAI",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "taskmaster-rbuildai": "dist/index.js",
-    "taskmaster-rbuildai-mcp": "dist/index.js"
+    "rtaskmaster": "dist/index.js",
+    "rtaskmaster-mcp": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -16,12 +16,14 @@
   },
   "keywords": [
     "mcp",
+    "rtaskmaster",
     "task-master",
     "ai",
     "vscode",
     "cursor",
     "copilot",
-    "task-management"
+    "task-management",
+    "rbuildai"
   ],
   "author": "Ragnar",
   "license": "MIT",
